# ATK-DNESP32S3M-MiniBoard

./: README.md
1_docs/: Developing_With_Arduino.md  Developing_With_ESP_IDF.md  Developing_With_MicroPython.md
1_docs/3_figures/examples/adc/: Thumbs.db
1_docs/3_figures/examples/key/: Thumbs.db
1_docs/3_figures/examples/led/: Thumbs.db
1_docs/3_figures/examples/rtc/: Thumbs.db
1_docs/3_figures/examples/sdcard/: Thumbs.db
1_docs/3_figures/examples/spilcd/: Thumbs.db
1_docs/3_figures/examples/temperate/: Thumbs.db
1_docs/3_figures/examples/uart/: Thumbs.db
1_docs/3_figures/examples/wifi_ble/: Thumbs.db
2_examples/1_ESP_IDF/1_basic_routines/00_basic/: README.md
2_examples/1_ESP_IDF/1_basic_routines/01_led/: README.md
2_examples/1_ESP_IDF/1_basic_routines/02_key/: README.md
2_examples/1_ESP_IDF/1_basic_routines/03_exit/: README.md
2_examples/1_ESP_IDF/1_basic_routines/04_uart/: README.md
2_examples/1_ESP_IDF/1_basic_routines/05_esp_timer/: README.md
2_examples/1_ESP_IDF/1_basic_routines/06-1_sw_pwm/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/06-2_hw_pwm/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/09_internal_temperature/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/10_rng/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/10_rng/components/BSP/RNG/: rng.c  rng.h
2_examples/1_ESP_IDF/1_basic_routines/8_rtc/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/8_rtc/components/BSP/RTC/: esp_rtc.c
3_firmware/: README.md
(+195 files in other folders)
